<?xml version="1.0" encoding="utf-8"?>
<!-- 
- LithiumMod Options 
- 
- Copyright (C) 2010  userdelroot r00t316@gmail.com (Frank C.)
-
- This program is free software: you can redistribute it and/or modify
- it under the terms of the GNU General Public License as published by
- the Free Software Foundation, either version 3 of the License, or any later version.
-
- This program is distributed in the hope that it will be useful,
- but WITHOUT ANY WARRANTY; without even the implied warranty of
- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- GNU General Public License for more details.
-
- You should have received a copy of the GNU General Public License
- along with this program.  If not, see <http://www.gnu.org/licenses/>. 
 -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    
<!-- Common -->
<string name="app_name">LithiumMod Options</string>
<string name="lm_enabled">Enable</string>
<string name="lm_disabled">Disable</string>
<string name="lm_options_title">LithiumMod Options</string>
<string name="dialog_btn_reboot">Yes</string>
<string name="dialog_btn_cancel">No</string>
<string name="format_summary_current">Current: <xliff:g id="value">%s</xliff:g></string>
<string name="loading_please_wait">Loading please wait..</string>
<string name="external_storage_umounted">External Storage not mounted!</string>
<string name="file_not_writeable">Failed: File not writable</string>
<string name="unknown_failure">Unknown Failure</string>
<string name="reboot_required_msg">Reboot is required.\nReboot now?</string>
<string name="process_failure">Failure</string>
<string name="change_success">Change Successful!</string>
<string name="lm_tweaks">Tweaks</string>
<!-- end -->

<string name="lcd_density_title">LCD Density</string>
<string name="lcd_density_dialog_title">Select LCD Density</string>
<string name="lcd_density_change_failure">LCD Density change failed.</string>
<string name="lcd_density_dialog_reboot_title">LCD Density changed</string>
<string name="bash_env_title">Bash Environment</string>
<string name="bash_env_failure">Bash Environment failed!</string>
<string name="lcd_density_prop_missing">Your build.prop is missing:\n\n\tro.sf.lcd_density\n\nLCD Density will be disabled</string>
<string name="lcd_density_disabled">Disabled missing ro.sf.lcd_density prop.</string>
<string name="block_ads_failure">Block Ads failed!</string>
<string name="block_ads_title">Block Ads</string>
<string name="block_ads_dialog_reboot_title">Block Ads changed</string>
<string name="dock_desk_title">Dock Desk</string>
<string name="dock_car_title">Dock Car</string>
<string name="jit_compiler">JIT Compiler</string>
<string name="jit_failure">Unable to change JIT options</string>
<string name="jit_compiler_dialog_reboot_title">JIT options changed</string>
</resources>
