<?xml version="1.0" encoding="utf-8"?>
<!-- 
- LithiumMod Options 
- 
- Copyright (C) 2010  userdelroot r00t316@gmail.com (Frank C.)
-
- This program is free software: you can redistribute it and/or modify
- it under the terms of the GNU General Public License as published by
- the Free Software Foundation, either version 3 of the License, or any later version.
-
- This program is distributed in the hope that it will be useful,
- but WITHOUT ANY WARRANTY; without even the implied warranty of
- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- GNU General Public License for more details.
-
- You should have received a copy of the GNU General Public License
- along with this program.  If not, see <http://www.gnu.org/licenses/>. 
 -->
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:title="@string/lm_options_title">
  
  <CheckBoxPreference 
  	android:key="bash_enviro" android:title="@string/bash_env_title" />
  	
  	<CheckBoxPreference android:key="block_ads" android:title="@string/block_ads_title" />
  	
  	<PreferenceScreen android:key="dock_desk" android:title="@string/dock_desk_title" />  
  	<PreferenceScreen android:key="dock_car" android:title="@string/dock_car_title" />  
  	
  	<PreferenceCategory android:title="@string/lm_tweaks">
  	  <fac.userdelroot.lithiummod.options.SeekBarPref android:key="lcd_density" android:title="@string/lcd_density_title"
  													  android:dialogTitle="@string/lcd_density_dialog_title"/>
  	<CheckBoxPreference android:key="jit_compiler" android:title="@string/jit_compiler" />
  	</PreferenceCategory>
</PreferenceScreen>
